[gd_scene load_steps=14 format=2]

[ext_resource path="res://Scripts/NPC.gd" type="Script" id=1]
[ext_resource path="res://Sprites/BakerIntroLevel/ChefSheet.png" type="Texture" id=2]
[ext_resource path="res://Art/Controls/icons8-left-click-50.png" type="Texture" id=3]

[sub_resource type="AtlasTexture" id=11]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 192, 0, 48, 56 )

[sub_resource type="AtlasTexture" id=12]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 240, 0, 48, 56 )

[sub_resource type="AtlasTexture" id=13]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 48, 0, 48, 56 )

[sub_resource type="AtlasTexture" id=4]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 96, 0, 48, 56 )

[sub_resource type="AtlasTexture" id=5]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 144, 0, 48, 56 )

[sub_resource type="SpriteFrames" id=6]
animations = [ {
"frames": [ SubResource( 11 ), SubResource( 12 ) ],
"loop": true,
"name": "Walk",
"speed": 5.0
}, {
"frames": [ SubResource( 13 ), SubResource( 4 ), SubResource( 5 ) ],
"loop": true,
"name": "Idle",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=7]
extents = Vector2( 12.5917, 23.3676 )

[sub_resource type="RectangleShape2D" id=8]
extents = Vector2( 69.3742, 37.2631 )

[sub_resource type="Animation" id=10]
resource_name = "MoveUPDOWN"
length = 0.4
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 2.58494e-26, -55.6875 ), Vector2( 1.54074e-33, -71.0382 ), Vector2( 2.58494e-26, -55.6875 ) ]
}

[sub_resource type="RectangleShape2D" id=9]
extents = Vector2( 10, 38.346 )

[node name="NPC" type="Node2D"]

[node name="KinematicBody2D" type="KinematicBody2D" parent="." groups=[
"NPC",
]]
script = ExtResource( 1 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="KinematicBody2D"]
scale = Vector2( 1.5, 1.5 )
frames = SubResource( 6 )
animation = "Walk"
frame = 1
flip_h = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="KinematicBody2D"]
scale = Vector2( 1.5, 1.5 )
shape = SubResource( 7 )

[node name="stateTimer" type="Timer" parent="KinematicBody2D"]
wait_time = 2.0

[node name="Interaction_Range" type="Area2D" parent="KinematicBody2D"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="KinematicBody2D/Interaction_Range"]
shape = SubResource( 8 )

[node name="InteractButton" type="Sprite" parent="KinematicBody2D"]
visible = false
position = Vector2( 2.58494e-26, -55.6875 )
scale = Vector2( 0.541, 0.511 )
texture = ExtResource( 3 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="KinematicBody2D/InteractButton"]
playback_speed = 0.6
anims/MoveUPDOWN = SubResource( 10 )

[node name="Bounds" type="Area2D" parent="."]
__meta__ = {
"_edit_group_": true
}

[node name="BoundsCS" type="CollisionShape2D" parent="Bounds"]
position = Vector2( -220.072, 0 )
shape = SubResource( 9 )
[connection signal="timeout" from="KinematicBody2D/stateTimer" to="KinematicBody2D" method="_on_stateTimer_timeout"]
[connection signal="body_entered" from="KinematicBody2D/Interaction_Range" to="KinematicBody2D" method="_on_Interaction_Range_body_entered"]
[connection signal="body_exited" from="KinematicBody2D/Interaction_Range" to="KinematicBody2D" method="_on_Interaction_Range_body_exited"]
[connection signal="body_entered" from="Bounds" to="KinematicBody2D" method="_on_Bounds_body_entered"]
